--- a/src/lang/locales/es.json
+++ b/src/lang/locales/es.json
@@ -13,8 +13,8 @@
     "cleanFilters": "Limpiar filtros",
     "searchAndSelect": "Busca y selecciona",
     "location": "Localización",
-    "personalInformation": "Información Personal",
-    "detailProfile": "Detalle del perfil",
+    "personalInformation": "Datos Personales",
+    "detailProfile": "Detalle",
     "fields": {
       "search": "Buscar",
       "age": "Edad",
@@ -24,10 +24,10 @@
       "name": "Nombre",
       "username": "Apellidos",
       "email": "Email",
-      "registrationDate": "Fecha de registro",
-      "dateToBirth": "Fecha de nacimiento",
-      "male": "Masculino",
-      "female": "Femenino",
+      "registrationDate": "Registro",
+      "dateToBirth": "Nacimiento",
+      "male": "Hombre",
+      "female": "Mujer",
       "city": "Ciudad",
       "street": "Calle",
       "phoneNumber": "Número de teléfono",
@@ -36,11 +36,11 @@
     "buttons": {
       "see": "Ver",
       "exportCsv": "Exportar a CSV",
-      "addFavorites": "Añadir a favoritos",
-      "deleteFavorite": "Quitar de favoritos",
+      "addFavorites": "+ FAV",
+      "deleteFavorite": "- FAV",
       "cancel": "Cancelar",
       "accept": "Aceptar",
-      "saveData": "Guardar datos",
+      "saveData": "Guardar",
       "editData": "Editar datos"
     }
   },
